# colibri-utils

./: AUTHORS  Makefile.am  README.md  codemeta.json  configure.ac  test.txt
data/: Makefile.am  dan.colibri.model  deu.colibri.model  dum.colibri.cls  dum.colibri.model  eng.colibri.cls  eng.colibri.model  fra.colibri.cls  fra.colibri.model  ita.colibri.cls  ita.colibri.model  lat.colibri.cls  lat.colibri.model  nld-vnn.colibri.cls  nld-vnn.colibri.model  nld.colibri.model  por.colibri.cls  por.colibri.model  spa.colibri.cls  spa.colibri.model  swe.colibri.model
m4/: Makefile.am
src/: Makefile.am  colibri-folialangid.cxx  colibri-lang.cxx
