config_DATA = dan.colibri.cls    dum.colibri.cls    fra.colibri.cls    lat.colibri.cls    nld.colibri.model      por.colibri.model  swe.colibri.model \
dan.colibri.model  dum.colibri.model  fra.colibri.model  lat.colibri.model  nld-vnn.colibri.cls    spa.colibri.cls \
deu.colibri.cls    eng.colibri.cls    ita.colibri.cls    nld-vnn.colibri.model  spa.colibri.model \
deu.colibri.model  eng.colibri.model  ita.colibri.model  nld.colibri.cls    por.colibri.cls        swe.colibri.cls

configdir = $(datadir)/colibri-utils/data

EXTRA_DIST = $(config_DATA)
